[package]
authors = ["irieryota <ryotairie123@gmail.com>"]
edition = "2018"
name = "blog-os-t"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
pc-keyboard = "0.5.0"
pic8259_simple = "0.2.0"
rlibc = "1.0.0"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.11.0"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
] 
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 

[[test]]
harness = false
name = "should_panic"

[[test]]
harness = false
name = "stack_overflow"
